# source-id

./: CMakeLists.txt  README.md  TODO  git-version.s.in  install-debug-symbols.sh  main.c  separate-debug-info.sh  source-id.txt
cmake/: GetGitInfo.cmake
hooks/: README  fetch_source_cgit.example  fetch_source_github.example
